<resources>
    <string name="app_name">Currency</string>
    <string name="problem">Problem</string>
    <string name="enter_ntd">Please enter your NTD amount</string>
    <string name="ok">OK</string>
    <string name="result">Result：</string>
    <string name="usd_is">\"1 USD ＝ 30.9 NTD and the USD is \"</string>
    <string name="ntd">NTD</string>
    <string name="go">Go</string>
    <string name="jp">JP</string>
    <string name="us">US</string>
    <string name="none">None</string>
    <string name="rate_exchange">Rate exchange</string>
</resources>